// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`resetAllState should reset state 1`] = `
Object {
  "payload": null,
  "type": "RESET_ALL_STATE",
}
`;

exports[`resetErrorState should by default return an array 1`] = `
Object {
  "payload": Array [],
  "type": "RESET_ERROR_STATE",
}
`;

exports[`resetErrorState should convert item to an array 1`] = `
Object {
  "payload": Array [
    "test",
  ],
  "type": "RESET_ERROR_STATE",
}
`;

exports[`resetRequestState should by default return an array 1`] = `
Object {
  "payload": Array [],
  "type": "RESET_REQUEST_STATE",
}
`;

exports[`resetRequestState should convert item to an array 1`] = `
Object {
  "payload": Array [
    "test",
  ],
  "type": "RESET_REQUEST_STATE",
}
`;
